took Wouter's suggestions of the 2nd review into consideration

--- a/report/references.bib
+++ b/report/references.bib
@@ -17,6 +17,30 @@
     address = {New York, NY, USA},
 }
 
+@inproceedings{xilinx-lava,
+    author={Singh, S.},
+    booktitle={VLSI Design, 2004. Proceedings. 17th International Conference on},
+    title={Designing reconfigurable systems in Lava},
+    year={2004},
+    pages={299-306},
+    doi={10.1109/ICVD.2004.1260941},
+}
+
+@article{reduceron,
+    author={NAYLOR,MATTHEW and RUNCIMAN,COLIN},
+    title={The Reduceron reconfigured and re-evaluated},
+    journal={Journal of Functional Programming},
+    volume={22},
+    issue={Special Issue 4-5},
+    month={9},
+    year={2012},
+    issn={1469-7653},
+    pages={574--613},
+    numpages={40},
+    doi={10.1017/S0956796812000214},
+    URL={http://journals.cambridge.org/article_S0956796812000214},
+}
+
 @inproceedings{observable-sharing-1999,
     author = {Claessen, Koen and Sands, David},
     title = {Observable Sharing for Functional Circuit Description},
@@ -30,7 +54,7 @@
     acmid = {756689},
     publisher = {Springer-Verlag},
     address = {London, UK, UK},
-} 
+}
 
 @inproceedings{forsyde1999,
     title={Formal System Design Based on the Synchrony Hypothesis, Functional Models, and Skeletons},
@@ -56,6 +80,11 @@
     year={2012},
     edition={3rd},
     publisher={MIT Press},
+}
+
+@inbook{nand2tetris-chapter-assembly,
+    chapter={Machine Language},
+    crossref={nand2tetris-book}
 }
 
 @misc{website:ghc-typenats,
