--- a/report/code/lava-circuit1-model-alu.tex
+++ b/report/code/lava-circuit1-model-alu.tex
@@ -4,12 +4,12 @@
     alu :: ([SB], [SB], ALUControlBits) -> ([SB], SB, SB)
     alu (x, y, (zx, nx, zy, ny, f, no)) = (out', zr, ng)
         where
-            out' = ifThenElse no (out, map inv out)
-            zr   = foldl (curry or2) low out'
-            ng   = equalBool high (last out')
+            x'   = mux (zx, (x, replicate (length x) low))
+            x''  = mux (nx, (x', map inv x'))
+            y'   = mux (zy, (y, replicate (length x) low))
+            y''  = mux (ny, (y', map inv y'))
             out  = let xy'' = zip x'' y'' in mux (f, (andl xy'', rippleCarryAdder xy''))
-            x'   = ifThenElse zx (x, replicate (length x) low)
-            x''  = ifThenElse nx (x', map inv x')
-            y'   = ifThenElse zy (y, replicate (length x) low)
-            y''  = ifThenElse ny (y', map inv y')
+            out' = mux (no, (out, map inv out))
+            zr   = foldl (curry and2) low out'
+            ng   = equalBool high (last out')
 \end{haskellcode}
